--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blah blah</title>
+  <title>Heeeyyyaa</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <!-- <h1>&#127801; Happy Rose Day &#127801;</h1> -->
+     <h1>&#127801; Happy Rose Day Babu &#x1F493; &#127801;</h1> 
     <img src="rose.gif" alt="Rose day">
-    <button id="showStringBtn">Get a Cheesy Quote</button>
+    <button id="showStringBtn">Click me to see more..</button>
     <div class="center-div" id="output"></div>
   </div>
     
